--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-dinky
+title: Welcome to Jie Ren's homepage!
+description: I am posting some of my research and study notes here! 
