--- a/_config.yml
+++ b/_config.yml
@@ -14,16 +14,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your Awesome Title
-email: your-email@example.com
+title: Jie Ren
+email: jay15summer@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is Jie Ren's personal website. I will post my study notes and selected research here. 
+  The posted blogs are mostly related with data modeling and machine learning. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: N.A.
+github_username:  jay15summer
 facebook:
  app_id: 1234
  publisher: 1234
