--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Jie Ren
+title: Jie Ren's website
 email: jay15summer@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   This is Jie Ren's personal website. I will post my study notes and selected research here. 
