--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -6,7 +6,7 @@
   url: /tags/
 - title: Categories
   url: /categories/
-- title: About
+- title: About me
   url: /about/
 - title: Sample
   url: /sample/
